<resources>
    <string name="app_name">LDPQuiz</string>
    <string name="score_text">Score</string>
    <string name="initial_score">3</string>
    <string name="initial_step">0</string>
    <string name="mix">Mix</string>
    <string name="flags">Flags</string>
    <string name="capitals">Capitals</string>
    <string name="exit_game">Exit Game</string>
    <string name="score">Score: </string>
    <string name="flags_two">Flags II</string>
    <string name="your_score">Your Score</string>
    <string name="menu">Menu</string>
</resources>
