<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/capitals"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_weight="1"
        android:background="@color/optionFour"
        android:drawableRight="@drawable/go_icon"
        android:padding="10dp"
        android:text="@string/capitals"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/flags"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@color/optionThree"
        android:drawableRight="@drawable/go_icon"
        android:padding="10dp"
        android:text="@string/flags"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capitals" />

    <Button
        android:id="@+id/flags2"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_weight="1"
        android:background="@color/optionTwo"
        android:drawableRight="@drawable/go_icon"
        android:padding="10dp"
        android:text="@string/flags_two"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mix"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="@color/optionOne"
        android:drawableRight="@drawable/go_icon"
        android:padding="10dp"
        android:text="@string/mix"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flags" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_weight="1"
        android:background="@color/optionFive"
        android:drawableRight="@drawable/go_icon"
        android:padding="10dp"
        android:text="@string/exit_game"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flags" />
</LinearLayout>